force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>