force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <label>BillingAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>