force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <label>BillingCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>