force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <label>BillingPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>