force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/CanCreateQuoteLineItems__c.field-meta.xml
<CustomField>
    <fullName>CanCreateQuoteLineItems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CanCreateQuoteLineItems</label>
    <type>Checkbox</type>
</CustomField>