force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>CreatedById</label>
    <length>255</length>
    <type>Text</type>
</CustomField>