force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>ExpirationDate</label>
    <type>Date</type>
</CustomField>