force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/External_ID_c__c.field-meta.xml
<CustomField>
    <fullName>External_ID_c__c</fullName>
    <label>External_ID__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>