force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <label>LastReferencedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>