force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <label>LastViewedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>