force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>LineItemCount__c</fullName>
    <label>LineItemCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>