force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/MayEdit__c.field-meta.xml
<CustomField>
    <fullName>MayEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MayEdit</label>
    <type>Checkbox</type>
</CustomField>