force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2Id__c</fullName>
    <label>Pricebook2Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>