force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/QuoteToName__c.field-meta.xml
<CustomField>
    <fullName>QuoteToName__c</fullName>
    <label>QuoteToName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>