force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/QuoteToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>QuoteToPostalCode__c</fullName>
    <label>QuoteToPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>