force-app/main/default/objects/Healthcare_Quote_Staging__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>ShippingPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>